# recon

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.claude/: launch.json
design/: README.md  architecture.md  setup-and-discovery.md  system-improvement-plan-2026-04-10.md  systemic-fixes-proposal-2026-04-11.md  ui-audit-2026-04-12.md  v2-spec.md  web-ui-spec.md  wiring-audit.md
design/archive/: architecture.md  operations.md  pipeline.md  research-and-verification.md  session-handoff-2026-04-12.md  tui-audit-2026-04-10.md  wiring-audit.md
design/web-ui/figma-sticker-sheet/: README.md
docs/: getting-started.md  how-it-works.md  release.md  visual-brief.md
docs/screenshots/: README.md
reference/: README.md
reference/orchestrators/: atlassian_orchestrator.py  batch_cleanup_README.md  p2_orchestrator.py  p3_5_orchestrator.py  p3_orchestrator.py  worker_prompt.md
reference/pipeline/: 00_discover.py  01_index.py  02_retrieve.py  03_synthesize.py  03_synthesize_deep.py  04_tag_themes.py  05_meta_synthesis.py  05_meta_synthesis_v1_backup.py  06_distill.py  README.md  config.yaml  requirements.txt
reference/prompts/: 00_ScaffoldCompetitors.md  00_SingleCompetitorProfile.md  01_PersistP1Research.md  02_CapabilitiesDepth.md  03_SentimentEvidence.md  04_ImplicationsSynthesis.md  05_ExecDeliverable.md  README.md  _AtlassianProductTemplate.md  _CompetitorTemplate.md  _ContinuationPrompt.md  _FormatCleanup.md  _FormatStandards.md  _ModelGuidance.md  _Schema.md
reference/prompts/replit/: 00_DataExport.md  01_BaseApp.md  02_DetailPanel.md  03_Filtering.md  04_PresentationMode.md  05_Polish.md  06_ThemesPage.md  README.md  SPEC_InteractivePresentation.md
src/recon/: __init__.py  api_key.py  api_keys.py  cli.py  client_factory.py  cost.py  deliver.py  discovery.py  enrichment.py  events.py  gemini_discovery.py  incremental.py  index.py  llm.py  logging.py  pipeline.py  prompts.py  provenance.py  research.py  schema.py  schema_designer.py  section_library.py  state.py  synthesis.py  tag.py  themes.py  validation.py  verification.py  wizard.py  workers.py  workspace.py
src/recon/cli_ui/: __init__.py  boxes.py  console.py  live.py  messages.py  shell.py  theme.py
src/recon/cli_ui/renderables/: __init__.py  card.py  shaded_bar.py  tab_breadcrumb.py
src/recon/cli_ui/views/: __init__.py  agents.py  comps.py  home.py  output.py  plan.py  schema.py  status.py
src/recon/tui/: __init__.py  app.py  curation.py  monitor.py  pipeline_runner.py  primitives.py  run_monitor.py  screens.py  shell.py  stage_monitor.py  theme.py  widgets.py  wizard.py
src/recon/tui/models/: __init__.py  dashboard.py  monitor.py
src/recon/tui/screens/: __init__.py  browser.py  confirm.py  curation.py  dashboard.py  describe.py  discovery.py  plan.py  planner.py  results.py  run.py  selector.py  template.py  welcome.py  wizard.py
src/recon/web/: __init__.py  api.py  events_bridge.py  fake_llm.py  schemas.py  server.py
src/recon/web/static/: app.js  index.html  primitives.css  recon.css  theme.css
tests/: conftest.py  test_api_keys.py  test_cli_add.py  test_cli_api_wiring.py  test_cli_discover.py  test_cli_e2e_fake_llm.py  test_cli_index.py  test_cli_shell.py  test_cli_tag.py  test_cli_wizard.py  test_client_factory.py  test_cost.py  test_deliver.py  test_discovery.py  test_discovery_agent.py  test_e2e_real.py  test_enrichment.py  test_events.py  test_gemini_discovery.py  test_incremental_index.py  test_index.py  test_integration.py  test_llm.py  test_logging.py  test_pipeline.py  test_prompts.py  test_research.py  test_run_monitor.py  test_run_monitor_widget.py  test_schema.py  test_schema_designer.py  test_smoke.py  test_state.py  test_synthesis.py  test_tag.py  test_theme_curation.py  test_theme_curation_widget.py  test_themes.py  test_tui.py  test_tui_activity_feed.py  (+30 more)
tests/web/: test_api_competitors.py  test_api_discover.py  test_api_readonly.py  test_api_runs.py  test_api_smoke.py  test_api_sse.py  test_api_template_confirm.py  test_api_workspaces.py  test_cli_serve.py  test_events_bridge.py
