[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recon-cli"
version = "0.1.0"
description = "Competitive intelligence CLI — structured research, local vector search, LLM-powered synthesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Matt Pacione", email = "mattpacione@gmail.com" },
]
keywords = ["competitive-intelligence", "cli", "llm", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "anthropic>=0.18",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
recon = "recon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recon"]

[tool.ruff]
target-version = "py311"
line-length = 120
