[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recon-cli"
version = "0.2.0"
description = "Competitive intelligence CLI — structured research, local vector search, LLM-powered synthesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Matt Pacione", email = "mattpacione@gmail.com" },
]
keywords = [
    "competitive-intelligence",
    "cli",
    "llm",
    "research",
    "anthropic",
    "claude",
    "tui",
    "textual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "anthropic>=0.18",
    "chromadb>=0.4.22",
    "fastembed>=0.4",
    "textual>=0.80",
    "aiosqlite>=0.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-textual-snapshot>=1.1",
    "ruff>=0.1",
    "httpx>=0.27",
]

[project.scripts]
recon = "recon.cli:main"

[project.urls]
Homepage = "https://github.com/mpacione/recon"
Repository = "https://github.com/mpacione/recon"
Issues = "https://github.com/mpacione/recon/issues"
Changelog = "https://github.com/mpacione/recon/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/recon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]
